Implement and use MapStruct for mapping objects